# vetis-extras

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: code-coverage.yml  release.yml  rust.yml
certs/: README.md  ca.crt  ca.der  ca.key  ca.srl  ip6-server.cnf  ip6-server.crt  ip6-server.csr  ip6-server.der  ip6-server.key  ip6-server.key.der  server.der  server.key.der
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LANGUAGE_SUPPORT.md  LICENSE.md  _config.yml  index.md  llms.txt
front/: Cargo.toml  README.md
front/src/: main.rs
vetis-asgi/: Cargo.toml
vetis-asgi/src/: callback.rs  lib.rs
vetis-auth/: Cargo.toml
vetis-auth/src/: basic.rs
vetis-fcgi/: Cargo.toml
vetis-fcgi/src/: lib.rs
vetis-proxy/: Cargo.toml  README.md
vetis-proxy/src/: lib.rs  tokio.rs
vetis-proxy/src/tests/: mod.rs
vetis-proxy/src/tests/files/: .htpasswd
vetis-proxy/src/tests/files/python/: main.py
vetis-proxy/src/tests/path/: mod.rs
vetis-proxy/tests/common/: mod.rs
vetis-proxy/tests/vetis/: mod.rs
vetis-rack/: Cargo.toml
vetis-rack/src/: callback.rs  lib.rs
vetis-rsgi/: Cargo.toml
vetis-rsgi/src/: callback.rs  lib.rs
vetis-sapi/: Cargo.toml
vetis-sapi/src/: lib.rs
vetis-scgi/: Cargo.toml
vetis-scgi/src/: lib.rs
vetis-static/: Cargo.toml  README.md
vetis-static/src/: compio.rs  lib.rs  smol.rs  tokio.rs
vetis-static/src/tests/: mod.rs
vetis-static/src/tests/files/: index.html
vetis-static/src/tests/path/: mod.rs
vetis-static/tests/: mod.rs
vetis-static/tests/files/: 404.html
vetis-static/tests/vetis/: mod.rs
vetis-wsgi/: Cargo.toml
vetis-wsgi/src/: lib.rs
