[package]
name = "front"
version = "0.1.0"
description = "Very Tiny Server Frontend"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["http", "development", "server", "frontend"]
publish = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.61", features = ["derive", "std"], default-features = false }
env_logger = "0.11.11"
http = "1.4.2"
serde = { version = "1.0.228", features = ["derive"] }
terminal-link = "0.1.0"
tokio = { version = "1.53.0", features = ["macros", 'rt-multi-thread'], default-features = false }
vetis = "0.1.4-beta.12"
vetis-static = { version = "0.1.0-beta.1" }
vetis-tokio = { version = "0.1.0-beta.7", default-features = false, features = ["http1", "rust-tls"]}
