[package]
name = "vetis-rack"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Very Tiny Server Rack support"
readme = "README.md"
license.workspace = true
keywords = ["http", "modules", "server", "rest-server"]
publish = true
rust-version.workspace = true

[features]
default = []

[dependencies]
http = "1.4.0"
hyper-body-utils = { version = "0.1.7", default-features = false }
log = "0.4.29"
magnus = { version = "0.8.2" }
vetis = { version = "0.1.4-beta.8" }
vetis-tokio = { version = "0.1.0-beta.3" }

[target.'cfg(target_env = "musl")'.dependencies]
bindgen = { version = "*", optional = true, default-features = false, features = [
  "static",
] }
mimalloc = { version = "0.1.52", features = ["v2"] }
rb-sys = { version = "*", optional = true, default-features = false, features = [
  "ruby-static",
] }

[target.'cfg(not(target_env = "musl"))'.dependencies]
bindgen = { version = "*", optional = true, default-features = false, features = [
  "runtime",
] }
mimalloc = { version = "0.1.52", features = ["v2"] }
rb-sys = { version = "*", optional = true, default-features = false, features = [
  "link-ruby",
] }

[target.'cfg(target_os = "windows")'.dependencies]
bindgen = { version = "*", optional = true, default-features = false, features = [
  "runtime",
] }
rb-sys = { version = "*", optional = true, default-features = false, features = [
  "link-ruby",
] }
