[package]
name = "vetis-rsgi"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Very Tiny Server RSGI support"
readme = "README.md"
license.workspace = true
keywords = ["http", "modules", "server", "rest-server"]
publish = true
rust-version.workspace = true

[features]
default = []

[dependencies]
http = "1.4.0"
hyper-body-utils = { version = "0.1.7", default-features = false }
pyo3 = "0.29.0"
vetis = { version = "0.1.4-beta.8" }
vetis-tokio = { version = "0.1.0-beta.3" }
