[package]
name = "vetis-sapi"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
http = "1.4.0"
hyper-body-utils = { version = "0.1.7", default-features = false }
log = "0.4.29"
ripht-php-sapi = "0.1.0-rc.7"
vetis = { version = "0.1.4-beta.8" }
vetis-tokio = { version = "0.1.0-beta.3" }
