[package]
name = "vetis-static"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Very Tiny Server Static Files support"
readme = "README.md"
license.workspace = true
keywords = ["http", "modules", "server", "rest-server"]
publish = true
rust-version.workspace = true

[features]
default = []
runtime-compio = ["compio/fs"]
runtime-smol = ["dep:smol"]
runtime-tokio = ["dep:tokio"]

[dependencies]
compio = { version = "0.19.1", optional = true, default-features = false }
duration-str = "0.21.0"
http = "1.4.2"
hyper-body-utils = "0.1.7"
log = "0.4.33"
minimime = "1.0.0"
regex = "1.12.4"
send_wrapper = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
smol = { version = "2.0.2", optional = true, default-features = false }
time = "0.3.41"
tokio = { version = "1.52.3", optional = true, default-features = false }
typetag = "0.2.21"
vetis = { version = "0.1.4-beta.9" }
