[package]
name = "vetis-static"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Very Tiny Server Static Files support"
readme = "README.md"
license.workspace = true
keywords = ["http", "modules", "server", "rest-server"]
publish = true
rust-version.workspace = true

[features]
default = ["runtime-tokio"]
runtime-tokio = [
  "deboa-tokio/http1",
  "deboa-tokio/rust-tls",
  "deboa-tokio/default-rustls-provider",
  "deboa-tokio/default-rustls-verifier",
  "vetis-tokio/http1",
  "vetis-tokio/rust-tls",
  "dep:tokio"
]

[dependencies]
deboa-tokio = { version = "0.1.0-beta.15", optional = true, default-features = false }
duration-str = "0.21.0"
http = "1.4.2"
hyper-body-utils = "0.1.7"
log = "0.4.33"
minimime = "1.0.0"
regex = "1.12.4"
send_wrapper = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3.41"
tokio = { version = "1.52.3", optional = true, default-features = false }
typetag = "0.2.21"
vetis = { version = "0.1.4-beta.9" }
vetis-tokio = { version = "0.1.0-beta.4", optional = true, default-features = false }

[dev-dependencies]
caramelo = "0.1.0"
compio = { version = "0.19.1", default-features = false }
deboa = "0.1.0-beta.25"
smol = { version = "2.0.2", default-features = false }
tokio = { version = "1.52.3", default-features = false, features = ["macros"] }
vetis-macros = { version = "0.1.1-beta.3" }
